@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency force="true" org="com.vaadin" name="vaadin" rev="6+" conf="build-vaadin6->default"/>
-        <dependency force="true" org="com.vaadin" name="vaadin" rev="7.0.0.beta8" conf="build-vaadin7,vaadin7->build-standard"/>
+        <dependency force="true" org="com.vaadin" name="vaadin" rev="7.0.0.beta9" conf="build-vaadin7,vaadin7->build-standard"/>
         <dependency force="true" org="javax.servlet" name="servletapi" rev="3.0" conf="build->default"/>
         <dependency force="true" org="javax.persistence" name="persistence-api" rev="2.0" conf="build->default"/>
         <dependency force="true" org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="build->default"/>
@@ -36,7 +36,7 @@
           conf="build->aop,beans,aspects,context-support,expression,orm,oxm,tx,web-servlet"/>
         <dependency force="true" org="org.aopalliance" name="aopalliance" rev="1.+" conf="build->default"/>
         <dependency force="true" org="org.hibernate" name="hibernate-validator" rev="4.1.0.Final" conf="test->default"/>
-        <dependency force="true" org="org.aspectj" name="aspectj" rev="1.6+" conf="build->tools"/>
+        <dependency force="true" org="org.aspectj" name="aspectj" rev="1.7+" conf="build->tools"/>
         <dependency force="true" org="org.testng" name="testng" rev="6.2+" conf="test->default"/>
         <dependency force="true" org="org.xmlpull.xpp3" name="xpp3" rev="1.1.3.4.O" conf="build,test->default"/>
     </dependencies>
